# sockSnake

./: .gitignore  CMakeLists.txt
client/: game.c  game.h  networking.c  networking.h
doc/: protocol.md
logger/: colors.h  logger.c  logger.h
networking/: networking.c  networking.h
protocol/: protocol.c  protocol.h
server/: server.c  server.h  server.py
server/snake/: snake.c  snake.h
utils/: crc32.c  crc32.h
